# Midas_ai

./: .env.example  .env.production.example  .gitignore  .gitignore.production  ADMIN_COMMANDS.md  API_DOCUMENTATION.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  README.md  START.md  TESTING.md  docker-compose.yml  env.production.example  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  schema.sql  setup.py
.rules/: fontend-prompt.txt
admin_panel/backend/: Dockerfile  requirements.txt
admin_panel/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
alembic/: env.py
alembic/versions/: add_language_001.py  add_telegram_fields.py  add_text_usage_007.py  make_click_trans_id_nullable_005.py  restore_language_column_004.py  seed_default_categories.py  (+1 more)
api/: config.py  database.py  main.py  seed_categories.py
app/: ai.py  categories.py  config.py  i18n.py  logging_utils.py  main.py  reporting.py  state.py  storage.py
bot/: Dockerfile  README.md  ai_agent.py  api_client.py  auth_handlers.py  config.py  confirmation_handlers.py  debt_actions.py  handlers.py  i18n.py  lang_messages.py  main.py  migrate_user_language.py  pending_storage.py  transaction_actions.py  user_storage.py
docs/: deploy.md
finance-tracker/: .env  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
scripts/: deploy.sh  generate_sample_data.py  run_tests.py
tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_categories.py  test_transactions.py
(+193 files in other folders)
