[tool.poetry]
name = "midas-api"
version = "2.0.0"
description = "AI-powered RESTful API for expense & income tracking with smart transaction parsing"
authors = ["Ascender Team Komron Khakimov <komronkhakimov17@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
sqlalchemy = "2.0.25"
asyncpg = "0.29.0"
pydantic = {extras = ["email"], version = "2.5.3"}
pydantic-settings = "2.1.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
bcrypt = "^4.0.0"
python-multipart = "0.0.6"
openai = "1.12.0"
pillow = "10.2.0"
pendulum = "3.0.0"
orjson = "3.9.12"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
httpx = "0.26.0"
faker = "22.5.1"
black = "^24.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "uvicorn api.main:app --reload"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
